<resources>
    <string name="app_name">애완동물 사진보기</string>
    <string name="text_select_start">선택을 시작하시겠습니까?</string>
    <string name="text_favorite_pet">좋아하는 애완동물은?</string>
    <string name="check_start">시작함</string>
    <string name="radio_dog">강아지</string>
    <string name="radio_rabbit">토끼</string>
    <string name="radio_cat">고양이</string>
    <string name="btn_done">선택 완료</string>
    <string name="btn_finish">종료</string>
    <string name="btn_first">처음으로</string>
</resources>