<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_medium"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_select_start"
        android:textSize="@dimen/text_size_large"
        android:layout_marginBottom="@dimen/margin_small"
        />
    <Switch
        android:id="@+id/check_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_start"
        android:textSize="@dimen/text_size_medium"/>
    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#F4F4B5">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_favorite_pet"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold"
            />
        <RadioGroup
            android:id="@+id/rg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/radio_dog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_dog"
                android:textSize="@dimen/text_size_medium"/>
            <RadioButton
                android:id="@+id/radio_rabbit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_rabbit"
                android:textSize="@dimen/text_size_medium"/>
            <RadioButton
                android:id="@+id/radio_cat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_cat"
                android:textSize="@dimen/text_size_medium"/>
        </RadioGroup>
        <ImageView
            android:id="@+id/imgv"
            android:layout_width="300dp"
            android:layout_height="250dp"
            android:scaleType="fitCenter"
            android:src="@drawable/dog"/>
        <Button
            android:id="@+id/btn_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_finish"
            />
        <Button
            android:id="@+id/btn_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_first"
            />
    </LinearLayout>
</LinearLayout>





